Issue #82 Add version to location deletion
Pass around versions of locations to delete to UI and back to make sure
it is deleted from the latest data state.

Also fix tests of location editing which was forgotten previously.